# diode-netbox-plugin

./: .gitignore  Makefile  README.md  netbox-plugin.yaml  pyproject.toml
.github/: pull_request_labeler.yaml
.github/ISSUE_TEMPLATE/: 01-feature_request.yaml  02-bug_report.yaml  03-documentation_change.yaml
.github/workflows/: labeler.yaml  lint-tests.yml  release.yaml
docker/: Dockerfile-diode-netbox-plugin  docker-compose.test.yaml  docker-compose.yaml  requirements-diode-netbox-plugin.txt
docker/netbox/: enable-diode-plugin.sh  launch-netbox.sh  plugins_test.py
docker/netbox/configuration/: plugins.py
docker/netbox/env/: netbox.env
netbox_diode_plugin/: __init__.py  forms.py  models.py  navigation.py  plugin_config.py  search.py  tables.py  urls.py  views.py
netbox_diode_plugin/api/: __init__.py  permissions.py  serializers.py  urls.py  views.py
netbox_diode_plugin/management/: __init__.py
netbox_diode_plugin/management/commands/: __init__.py  configurediodeplugin.py
netbox_diode_plugin/migrations/: 0001_initial.py  0002_setting.py  0003_clear_permissions.py  0004_rename_legacy_users.py  0005_revoke_superuser_status.py
netbox_diode_plugin/reconciler/: __init__.py
netbox_diode_plugin/reconciler/sdk/: __init__.py  client.py  exceptions.py
netbox_diode_plugin/reconciler/sdk/v1/: __init__.py  ingester_pb2.py  ingester_pb2.pyi  ingester_pb2_grpc.py  reconciler_pb2.py  reconciler_pb2.pyi  reconciler_pb2_grpc.py
netbox_diode_plugin/reconciler/sdk/validate/: __init__.py  validate_pb2.py  validate_pb2.pyi
netbox_diode_plugin/templates/diode/: audit_log.html  ingestion_logs.html  ingestion_logs_paginator.html  ingestion_logs_table.html  settings.html  settings_edit.html  setup.html
netbox_diode_plugin/templatetags/: __init__.py  diode_filters.py
netbox_diode_plugin/tests/: __init__.py  test_api_apply_change_set.py  test_api_object_state.py  test_api_serializers.py  test_apply_change_set.py  test_forms.py  test_models.py  test_object_state.py  test_plugin_config.py  test_reconciler_sdk_client.py  test_tables.py  test_templatetags.py  test_version.py  test_views.py
